--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,3 @@
-MONGO = your_uri
+# MONGO = mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&directConnection=true&ssl=false
+MONGO = mongodb+srv://sangam24:Sangam9069@cluster0.9yomd.mongodb.net/booking
 JWT = 8hEnPGeoBqGUT6zksxt4G95gW+uMdzwe7EVaRnp0xRI=
